--- a/local/pomodoro/assets/css/styles.css
+++ b/local/pomodoro/assets/css/styles.css
@@ -17,7 +17,7 @@ body {
 .container-fluid {
   width: 100%;
   padding: 0;
-  margin: 0;
+  margin: 20px 0 0 0;
 }
 .row::after {
   content: "";
@@ -36,6 +36,11 @@ body {
   margin: auto;
   text-align: center;
   max-width: 100%;
+}
+body,
+.container .col-12:first-of-type {
+  margin: 0;
+  padding: 0;
 }
 /* The "clock" */
 #clock {
@@ -166,6 +171,7 @@ input[type="button"]:hover {
 .btn {
   font-size: 1.1em;
   width: 100%;
+  max-width: 300px;
   padding: 5px 0 5px 0;
   color: white;
   font-family: 'Orbitron', sans-serif;
